<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8d6e63">

    <TextView
        android:id="@+id/bio"
        style="@style/TextContext.2"
        android:layout_marginTop="16dp"
        android:text="@string/bio"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bioniana"
        android:layout_width="375dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/bio_niana"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/supported"
        style="@style/TextContext.2"
        android:layout_marginTop="24dp"
        android:text="@string/support"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioniana" />

    <ImageView
        android:id="@+id/milo"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/milo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supported" />

    <ImageView
        android:id="@+id/ytb"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="240dp"
        android:src="@drawable/youtube"
        app:layout_constraintStart_toEndOf="@+id/milo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nick"
        android:layout_width="125dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/nick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ytb"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>