<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#be9c91">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/niana"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="155dp"
            android:src="@drawable/niana"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/location"
            android:layout_width="23dp"
            android:layout_height="28dp"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="255dp"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/manila"
            style="@style/TextContext.1"
            android:layout_marginTop="255dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/business"
            android:layout_width="25dp"
            android:layout_height="27dp"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="190dp"
            android:src="@drawable/business"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/dancer"
           style="@style/TextContext.1"
            android:layout_marginTop="8dp"
            android:text="@string/business"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manila" />

        <ImageView
            android:id="@+id/link"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="190dp"
            android:src="@drawable/link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business" />

        <TextView
            android:id="@+id/niana.com"
            style="@style/TextContext.1"
            android:layout_marginTop="8dp"
            android:text="@string/link"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dancer" />

        <include
            android:id="@+id/button"
            layout="@layout/layout_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/niana" />

        <include
            android:id="@+id/desc"
            layout="@layout/layout_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>